--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 
-group = 'github.com.ksks2211'
-version 'v1.0.2'
+group = 'com.github.ksks2211'
+version 'v1.0.3'
 
 repositories {
     mavenCentral()
