--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,12 @@ plugins {
     id 'java'
 }
 
+
 group = 'com.github.ksks2211'
-version 'v1.0.4'
+version 'v1.0.5'
+
+sourceCompatibility='17'
+targetCompatibility='17'
 
 repositories {
     mavenCentral()
@@ -14,11 +18,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
-
-java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-}
 
 test {
     useJUnitPlatform()
