--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 
 group = 'com.github.ksks2211'
-version 'v1.0.5'
+version 'v1.0.6'
 
 sourceCompatibility='17'
 targetCompatibility='17'
@@ -13,6 +14,11 @@ repositories {
     mavenCentral()
 }
 
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+}
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
