--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 
 group = 'com.github.ksks2211'
-version 'v1.0.7'
+version 'v1.0.8'
 
 
 repositories {
@@ -14,8 +14,8 @@ repositories {
 
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
 }
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
